# VNAV-labs

./: .clang-format  README.md
lab1/: main.cpp  random_vector.cpp  random_vector.h
lab2/two_drones_pkg/: CMakeLists.txt  README.md  package.xml
lab2/two_drones_pkg/config/: default.rviz
lab2/two_drones_pkg/launch/: two_drones.launch  two_drones.launch.yaml
lab2/two_drones_pkg/mesh/: quadrotor.dae
lab2/two_drones_pkg/src/: frames_publisher_node.cpp  plots_publisher_node.cpp
lab3/controller_pkg/: CMakeLists.txt  package.xml
lab3/controller_pkg/config/: params.yaml
lab3/controller_pkg/launch/: traj_tracking.launch  traj_tracking.launch.py
lab3/controller_pkg/rviz/: lab3.rviz
lab3/controller_pkg/src/: controller_node.cpp  traj_publisher.cpp
lab3/tesse-interface/: README.md  requirements.txt  setup.cfg  setup.py
lab3/tesse-interface/notebooks/: python_demonstration.ipynb
lab3/tesse-interface/tests/: test_import.py
lab3/tesse-ros-bridge/: README.md
lab3/tesse-ros-bridge/ROS/: CMakeLists.txt  package.xml  setup.py
lab3/tesse-ros-bridge/ROS/launch/: maps.launch  play_traj.launch  record_traj.launch  tesse_bridge.launch  tesse_quadrotor_bridge.launch
lab3/tesse-ros-bridge/ROS/maps/: city.yaml  city_roads.yaml
lab3/tesse-ros-bridge/ROS/msg/: CollisionStats.msg
lab3/tesse-ros-bridge/ROS/params/: camera_params.yaml  lidar_params.yaml  map_tfs.yaml  noise_model.yaml  object_spawn_params.yaml  tesse_agent_params.yaml
lab3/tesse-ros-bridge/ROS/rqt_multiplot/: tesse.xml
lab3/tesse-ros-bridge/ROS/rviz/: tesse_rss.rviz
lab3/tesse-ros-bridge/ROS/scripts/: convert_static_tf_csv.py  restamp_rosbag.py  rosbag_record.bash  traj_loader.py  traj_saver.py
lab3/tesse-ros-bridge/ROS/scripts/notebooks/: tesse_nn_training.ipynb
lab3/tesse-ros-bridge/ROS/src/key_teleop/: key_teleop.py
lab3/tesse-ros-bridge/ROS/src/tesse_ros_bridge/: __init__.py  noise_simulator.py  quadrotor_control_interface.py  tesse_ros_node.py  utils.py
lab3/tesse-ros-bridge/ROS/srv/: SceneRequestService.srv
lab3/tesse-ros-bridge/ROS/tests/: test_utils.py
lab3/tesse-ros-bridge/ROS/tests/data/: cam_data_0.xml  lidar_data_0.xml  metadata_0.xml  metadata_1.xml  metadata_2.xml  metadata_3.xml  metadata_4.xml  metadata_5.xml  metadata_6.xml  object_data_0.xml
lab3/tesse-ros-bridge/ROS/trajectories/: traj_apartment.csv  traj_neighborhood.csv  traj_neighborhood_2.csv  traj_office_long.csv  traj_subway_long.csv
lab3/tesse-ros-bridge/tesse-interface/: requirements.txt
lab3/tesse_msgs/: CMakeLists.txt  package.xml
lab3/tesse_ros_bridge/: package.xml  setup.cfg  setup.py
lab4/dependencies/mav_trajectory_generation/: CMakeLists.txt
lab4/dependencies/mav_trajectory_generation/install/: mav_trajectory_generation_https.rosinstall  mav_trajectory_generation_ssh.rosinstall
lab4/planner_pkg/: CMakeLists.txt  package.xml
lab4/planner_pkg/launch/: static_point_test.launch  static_point_test.launch.py  traj_gen.launch  traj_gen.launch.py
lab4/planner_pkg/src/: simple_traj_planner.cpp  traj_planner.cpp  traj_vertices_publisher.cpp
lab4/rviz/: lab4.rviz
lab4/trajectory_generation_pkg/: CMakeLists.txt  package.xml
lab4/trajectory_generation_pkg/launch/: traj_following.launch  traj_following.launch.py
lab4/trajectory_generation_pkg/src/: spiral_pose_publisher.cpp  trajectory_generation_node.cpp
lab5/: CMakeLists.txt  README.md  package.xml
lab5/dependencies/cv_bridge_catkin/: CMakeLists.txt  package.xml
lab5/dependencies/opencv3_catkin/: .gitignore  CMakeLists.txt  README.md  fix_lapack.patch  fix_python_discovery.patch  package.xml  rename_unordered_map_definition.patch
lab5/feature_tracking/: CMakeLists.txt  README.md  package.xml
lab5/feature_tracking/include/: fast_feature_tracker.h  feature_tracker.h  lk_feature_tracker.h  orb_feature_tracker.h  sift_feature_tracker.h  surf_feature_tracker.h
lab5/feature_tracking/install/: lab_5.rosinstall
lab5/feature_tracking/launch/: two_frames_tracking.launch  video_tracking.launch
lab5/feature_tracking/src/: fast_feature_tracker.cpp  feature_tracker.cpp  lk_feature_tracker.cpp  orb_feature_tracker.cpp  self_flow.cpp  sift_feature_tracker.cpp  surf_feature_tracker.cpp  track_features.cpp
lab5/include/: akaze_feature_tracker.h  brisk_feature_tracker.h  feature_tracker.h  lk_feature_tracker.h  orb_feature_tracker.h  ring_buffer.hpp  sift_feature_tracker.h
lab5/launch/: self_flow.launch.yaml  two_frames_tracking.launch.yaml  video_tracking.launch.yaml
lab5/src/: akaze_feature_tracker.cpp  brisk_feature_tracker.cpp  feature_tracker.cpp  lk_feature_tracker.cpp  orb_feature_tracker.cpp  self_flow.cpp  sift_feature_tracker.cpp  track_features.cpp
lab6/: CMakeLists.txt  README.md  package.xml
lab6/config/: default.rviz
lab6/include/: lab6_utils.h  pose_estimation.h  tracker_shim.h
lab6/install/: lab_6.rosinstall
lab6/launch/: video_tracking.launch  video_tracking.launch.yaml
lab6/rviz/: chessboard.rviz  config.rviz  office.rviz
lab6/src/: pose_estimation.cpp  tracker_shim.cpp
lab7/: CMakeLists.txt  README.md  package.xml
lab7/include/: deliverable_2_3.h  deliverable_4.h  deliverable_5.h  example_data.h  trajectory_color.h
lab7/install/: lab_7.rosinstall
lab7/launch/: deliverable_2_3.launch.yaml  deliverable_4.launch.yaml  rungdb.sh  video_tracking.launch
lab7/rviz/: deliverable_2_3.rviz  deliverable_4.rviz  lab7.rviz
lab7/src/: deliverable_1.cpp  deliverable_2_3.cpp  deliverable_4.cpp  deliverable_5.cpp
lab8/: CMakeLists.txt  README.md  package.xml
lab8/config/: ros.yaml
lab8/include/: csv_parser.h  euroc_dataset.h  helper_functions.hpp  tracker_wrapper.h
lab8/launch/: deliverable_1.launch.yaml  loop_closure.launch  yolo_localization.launch  yolov3.launch
lab8/rviz/: loop_closure.rviz  teddy_tf.rviz
lab8/src/: deliverable_1.cpp  deliverable_2.cpp  deliverable_3.cpp  deliverable_4.cpp  euroc_dataset.cpp  tracker_wrapper.cpp
lab9/: .run_kimera.sh  .run_orbslam.sh  Dockerfile_KIMERA  Dockerfile_ORBSLAM3  fix_timestamps.py  orb_slam.patch  run_docker.sh  run_kimera.sh
(+32 files in other folders)
