<?xml version="1.0"?>
<package>
  <name>lab_5</name>
  <version>0.0.0</version>
  <description>The lab_5 package. Contains software to learn about feature detection + matching.</description>

  <maintainer email="aaronray@mit.edu">Aaron Ray</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <build_depend>rclcpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
