<?xml version="1.0"?>
<package format="2">
  <name>lab_7</name>
  <version>0.0.0</version>
  <description>The lab_7 package. Contains software to learn about SLAM.</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>gtsam</depend>
  <depend>eigen_catkin</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
</package>