<?xml version="1.0"?>
<package format="3">
  <name>lab_7</name>
  <version>0.0.0</version>
  <description>The lab_7 package. Contains software to learn about SLAM.</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>gtsam</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
