<?xml version="1.0"?>
<package format="2">
  <name>two_drones_pkg</name>
  <version>0.0.0</version>
  <description>MIT VNAV - Lab 2 package</description>
  <maintainer email="jnshi@mit.edu">Jingnan Shi</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <export>
  </export>
</package>
