<?xml version="1.0"?>
<package>
  <name>planner_pkg</name>
  <version>0.0.0</version>
  <description>The UAV trajectory planner package</description>
  <maintainer email="jnshi@mit.edu">Jingnan Shi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <!--build_depend>eigen_conversions</build_depend-->

  <run_depend>rclcpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mav_msgs</run_depend>
  <!--run_depend>eigen_conversions</run_depend-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
