<?xml version="1.0"?>
<package format="2">
  <name>trajectory_generation</name>
  <version>0.0.0</version>
  <description>The trajectory_generation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sjamieson@whoi.edu">Stewart Jamieson</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>D</license>
  <license>O</license>
  <license>O</license>
  <license>T</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/trajectory_generation</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>glog_catkin</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>mav_planning_msgs</build_depend>
  <build_depend>mav_trajectory_generation</build_depend>
  <build_depend>mav_visualization</build_depend>
  <build_depend>nlopt</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml_cpp_catkin</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_export_depend>catkin_simple</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>eigen_catkin</build_export_depend>
  <build_export_depend>eigen_checks</build_export_depend>
  <build_export_depend>glog_catkin</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>mav_planning_msgs</build_export_depend>
  <build_export_depend>mav_trajectory_generation</build_export_depend>
  <build_export_depend>mav_visualization</build_export_depend>
  <build_export_depend>nlopt</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>yaml_cpp_catkin</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <exec_depend>catkin_simple</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>eigen_checks</exec_depend>
  <exec_depend>glog_catkin</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>mav_planning_msgs</exec_depend>
  <exec_depend>mav_trajectory_generation</exec_depend>
  <exec_depend>mav_visualization</exec_depend>
  <exec_depend>nlopt</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>yaml_cpp_catkin</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
